--- a/qft/index.html
+++ b/qft/index.html
@@ -32,7 +32,7 @@
       }
       <audio controls>
   <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="vivo.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
       }
@@ -45,7 +45,7 @@ Your browser does not support the audio element.
     <!-- Botón pequeño y centrado debajo de la imagen -->
     <div class="boton-badge">
       <a href="https://secreto.site/a2wfy7">
-        <img src="https://img.shields.io/badge/click%20here-black?style=for-the-badge" alt="click here">
+        <img src="https://img.shields.io/badge/click%20here-black?style=for-the-badge" alt=":)">
       </a>
     </div>
   </body>
