--- a/qft/index.html
+++ b/qft/index.html
@@ -29,18 +29,19 @@
       .boton-badge img {
         width: 110px;      /* Botón más pequeño */
         height: auto;
-      }
-      <audio controls>
-  <source src="vivo.ogg" type="audio/ogg">
-  <source src="vivo.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio>
+        font-family: Candara
       }
     </style>
   </head>
   <body>
     <!-- Imagen principal grande y centrada -->
     <img src="IMG_3421.jpeg" alt="Nota manuscrita" class="imagen-grande">
+
+    <audio controls>
+  <source src="vivo.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+    </audio>
+
 
     <!-- Botón pequeño y centrado debajo de la imagen -->
     <div class="boton-badge">
