--- a/qft/index.html
+++ b/qft/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <!-- Imagen principal grande y centrada -->
-    <img src="IMG_3421.jpeg" alt="Nota manuscrita" class="imagen-grande">
+    <img src="butterfly.mp4" alt="Nota manuscrita" class="imagen-grande">
 
     <audio controls>
   <source src="vivo.mp3" type="audio/mpeg">
