--- a/qft/index.html
+++ b/qft/index.html
@@ -52,7 +52,7 @@ Retrieved 2025-11-24, License - CC BY-SA 3.0
     <!-- Botón pequeño y centrado debajo de la imagen -->
     <div class="boton-badge">
       <a href="https://secreto.site/jp/arkjy7">
-        <img src="https://img.shields.io/badge/:)%20-black?style=for-the-badge" alt=":)">
+        <img src="https://img.shields.io/badge/:)%20-white?style=for-the-badge" alt=":)">
       </a>
     </div>
   </body>
