--- a/qft/index.html
+++ b/qft/index.html
@@ -43,8 +43,9 @@ Posted by Vinith
 Retrieved 2025-11-24, License - CC BY-SA 3.0
 -->
 
-<audio autoplay loop>
-      <source src="fire.mp3">
+<audio autoplay>
+  <source src="fire.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
 </audio>
 
 
