--- a/qft/index.html
+++ b/qft/index.html
@@ -36,6 +36,7 @@
   <body>
     <!-- Imagen principal grande y centrada -->
     <img src="IMG_3429.png" alt="Nota manuscrita" class="imagen-grande">
+    <a href="https://secreto.site/jp/arkjy7">
 
     <!--
 Source - https://stackoverflow.com/a
