--- a/qft/index.html
+++ b/qft/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <!-- Imagen principal grande y centrada -->
-    <a href="https://secreto.site/jp/arkjy7">
+    <a href="https://horizon-inside-silence.github.io/dlk">
     <img src="IMG_3427.png" alt="Nota manuscrita" class="imagen-grande">
 
 
@@ -45,9 +45,6 @@ Posted by Vinith
 Retrieved 2025-11-24, License - CC BY-SA 3.0
 -->
 
-<audio autoplay>
-  <source src="fire.mp3" type="audio/mpeg">
-</audio>
 
       </a>
     </div>
